# linux-userspace

./: Android.md  Coursera-datastructures2016.md  OpenCV-Python.md  README.md  alsa.md  c++11.md  dbus.md  fastai.md  google-cloud-speech.sh  gstreamer.md  index.html  kbuild.md  linux-sysadmin.md  music.md  numpy.md  nvidia-gtc.md  ooad.md  params.json
Notes/Coursera_DeepLearning/: 1_Intro.md  2_hyperparam-tuning.md  3_ML-strategy.md  4_CV.md  5_fastai.md  6_Sequence.md  7_SpeakerIdentification.md  8_keras.md  9_tensorflow.md
Notes/Coursera_DeepLearning/Examples/: Tensorflow_examples.ipynb
Notes/Gardening/: Home_Gardening.md
Notes/SpeechRecognition/: speech.md
Notes/Udacity_SelfDrive/: 4_intro-NN.md  4_intro-NN.md.html
Notes/kernel_training_advanced/: 1_intro_arch-qemu-lkm.md
Notes/tests/: speed_from_camera.md
autotools/: Makefile.am  configure.ac
