AC_PREREQ([2.53])

dnl init
AC_INIT([mypackage],[1.0.0])

dnl src dir
AC_CONFIG_SRCDIR([src/])
#AC_CONFIG_AUX_DIR([tmp/])

dnl compilers
#AC_PROG_CC
AC_PROG_CXX

dnl init automake
AM_INIT_AUTOMAKE([foreign 1.10 subdir-objects])

dnl makefile generation
AC_CONFIG_FILES([Makefile])

dnl output
AC_OUTPUT
